--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       // 실제로는 원하는 기능을 구현해야 합니다.
       function checkMetaMaskAccount() {
         if (typeof web3 !== "undefined") {
-          web3 = new Web3(web3.currentProvider);
+          // web3 = new Web3(web3.currentProvider);
+          web3 = new Web3('https://avalanche-fuji.infura.io/v3/94dc467523cc4cdcb980c4a9ae3bba5e');
           web3.eth.getAccounts(function (error, accounts) {
             if (error) {
               console.error(error);
@@ -40,6 +41,6 @@
   </head>
   <body>
     <h1>메타마스크 팝업 예제 페이지</h1>
-    <button onclick="openMetaMaskPopup()">메타마스크 계정 확인</button>
+    <button onclick="checkMetaMaskAccount()">메타마스크 계정 확인</button>
   </body>
 </html>
