--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
   <body>
     <h1>메타마스크 팝업 예제 페이지</h1>
     <button onclick="openMetaMaskPopup()">메타마스크 계정 확인</button>
+    <button onclick="checkMetaMaskAccount()">메타마스크 계정 확인</button>
   </body>
 </html>
